<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoxApp</string>
    <string name="menu_settings">Settings</string>
    <string name="auth_activity_name">Authorization</string>
    <string name="authorize_token">Authorize token</string>
    <string name="refresh_token">Refresh token</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="file_context_menu_name">Select action</string>
    <string name="getting_access_data">Getting access data from server, please wait</string>
    <string name="success_authorization">You have been successfully authorized. Now you\'ll be redirected to your home path.</string>
    <string name="download">Download</string>
    <string name="edit_mode">Edit</string>
    <string name="normal_mode">Normal</string>
    <string name="new_folder">New folder</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="paste">Paste</string>
    <string name="upload">Upload file</string>
    <string name="rename">Rename</string>
    <string name="logout">Log out</string>
    <string name="open">Open</string>
    <string name="download_starting">Starting to download file</string>
    <string name="download_completed">File successfully downloaded</string>
    <string name="upload_completed">File successfully uploaded</string>
    <string name="download_failed">Failed to download file</string>
    <string name="debug">DEBUG</string>
    <string name="auth_success">You have been successfully authorized!</string>
    <string name="loading">Loading files...</string>
    <string name="error_occured">An error occured while trying to authorize.</string>
    <string name="no_app_found">No application found to open file. Please, install some...</string>
    <string name="downloaded">downloaded</string>
    <string name="enter_name_for_new_folder">Enter name\nfor new folder</string>
    <string name="downloading">Downloading</string>
    <string name="title_activity_box_login">BoxLoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_option">Select option</string>
    <string name="file_exists">File with the same name already exists in this folder.</string>
    <string name="starting_uploading">Starting uploading </string>
    <string name="unknown_error">Something went wrong...</string>
    <string name="uploading">Uploading</string>
    <string name="upload_failed">Upload failed</string>
    <string name="no_internet_connection">No internet connection. Please, check your connection, and try again!</string>
    <string name="folder_already_exists">Folder with such name exists already</string>
    <string name="file_successfully_copied">File successfully copied</string>
    <string name="file_sucessfully_deleted">File successfully deleted</string>
    <string name="download_started">Download started...</string>
    <string name="item_successfully_renamed">Item successfully renamed!</string>

</resources>