<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_margin="10dp">
    <ImageView
        android:id="@+id/folder_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/add_folder" />

    <EditText
        android:id="@+id/folder_name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/folder_image"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/new_folder"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/folder_image"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:textSize="22sp"
        android:text="@string/enter_name_for_new_folder" />

</RelativeLayout>
