<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto" >
	<item
		android:id="@+id/menu_upload"
		android:orderInCategory="100"
		android:title="@string/upload"
		android:icon="@drawable/upload"
        app:showAsAction="always|collapseActionView"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
		
	<item
		android:id="@+id/menu_create_folder"
		android:orderInCategory="200"
		android:title="@string/new_folder"
		android:icon="@drawable/add_folder"
        app:showAsAction="always|collapseActionView"
		app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
	
	<item
		android:id="@+id/menu_paste"
		android:orderInCategory="300"
		android:title="@string/new_folder"
		android:icon="@drawable/paste"
        app:showAsAction="always|collapseActionView"
		android:visible="false"
		app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="400"
        android:title="@string/logout"
        android:icon="@drawable/logout"
        app:showAsAction="always|collapseActionView"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
</menu>